# AI_Friday

./: .gitignore  main.py  pyproject.toml  requirements.txt  secret_remove.py
0-DataIngestParsing/: 1-dataingestion.ipynb  2-dataparsingpdf.ipynb  3-dataparsingdoc.ipynb  4-csvexcelparsing.ipynb  5-jsonparsing.ipynb  6-databaseparsing.ipynb
0-DataIngestParsing/data/structured_files/: inventory.xlsx
1-VectorEmbeddings/: openaiembeddings.ipynb
2-Vector Stores/: 1-chromadb.ipynb  2-faiss.ipynb
