[project]
name = "rag-udemy-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.2.1",
    "docx2txt>=0.9",
    "faiss-cpu>=1.12.0",
    "ipykernel>=7.0.1",
    "jq>=1.10.0",
    "langchain>=1.0.1",
    "langchain-community>=0.4",
    "langchain-core>=1.0.0",
    "langchain-experimental>=0.0.42",
    "langchain-google-genai>=3.0.0",
    "langchain-groq>=1.0.0",
    "langchain-huggingface>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.1",
    "matplotlib>=3.10.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pymupdf>=1.26.5",
    "pypdf>=6.1.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-magic>=0.4.27",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.1.1",
    "tiktoken>=0.12.0",
    "transformers>=4.57.1",
    "unstructured-client>=0.42.3",
    "unstructured[docx,excel,local-inference]>=0.18.15",
    "wikipedia>=1.4.0",
]
